Link against mpi_libraries + cleaned up whitespace in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 project                     (cian)
 cmake_minimum_required      (VERSION 2.8)
 
-option                      (optimize       "Build cian with optimization"		    ON)
-option                      (debug          "Build cian with debugging on"		    OFF)
+option                      (optimize       "Build cian with optimization"          ON)
+option                      (debug          "Build cian with debugging on"          OFF)
 
 # Debugging
 if                          (debug)
@@ -23,17 +23,19 @@ add_definitions             (${cxx_flags})
 
 # MPI
 find_package                (MPI REQUIRED)
+set                         (mpi_libraries              ${MPI_C_LIBRARIES} ${MPI_CXX_LIBRARIES})
 
 # Threads
-find_package		    (Threads)
-find_package		    (OpenMP)
+find_package                (Threads)
+find_package                (OpenMP)
 
 # DIY
-find_path                   (DIY_INCLUDE_DIRS		diy/types.h)
+find_path                   (DIY_INCLUDE_DIRS       diy/types.h)
 
 set                         (CMAKE_INCLUDE_SYSTEM_FLAG_CXX "-isystem")
 include_directories         (${DIY_INCLUDE_DIRS}
                              SYSTEM ${MPI_INCLUDE_PATH}
                             )
 
-add_executable (neighbor neighbor.cpp) # TODO: later add reduce.cpp
+add_executable              (neighbor neighbor.cpp) # TODO: later add reduce.cpp
+target_link_libraries       (neighbor   ${mpi_libraries})
