--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ cmake_minimum_required      (VERSION 2.8)
 
 option                      (optimize       "Build cian with optimization"          ON)
 option                      (debug          "Build cian with debugging on"          OFF)
-option                      (threads        "Build cian with threading on"          OFF)
 option                      (bgq            "Build on BG/Q"                         OFF)
+option                      (diy_thread     "Enable diy threading"                  OFF)
 
 if                          (bgq)
     add_definitions         (-DBGQ)
@@ -27,44 +27,49 @@ else                        (debug)
 endif                       (debug)
 add_definitions             (${cxx_flags})
 
-# MPI
+# OSX flags
+IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+    add_definitions	    (-DMAC_OSX)
+ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+
+ # MPI
 find_package                (MPI REQUIRED)
 if                          (NOT bgq)
-    set                     (mpi_libraries              ${MPI_C_LIBRARIES} ${MPI_CXX_LIBRARIES})
+    set                     (libraries ${libraries}    ${MPI_C_LIBRARIES} ${MPI_CXX_LIBRARIES})
 endif                       (NOT bgq)
 
 # Threads
-if                          (threads)
-    find_package            (Threads)
-    find_package            (OpenMP)
-else                        (threads)
+find_package		    (Threads)
+find_package		    (OpenMP)
+if 			    (OPENMP_FOUND)
+  set                       (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+  set                       (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+else			    ()
+  message		    ("OpenMP not found")
+  add_definitions	    (-DTESS_NO_OPENMP)
+endif                       ()
+if                          (NOT diy_thread)
+    message                 ("Diy threading is disabled; setting diy threads will have no effect")
     add_definitions         (-DDIY_NO_THREADS)
-endif                       (threads)
-
+endif                       (NOT diy_thread)
 
 # DIY
 find_path                   (DIY_INCLUDE_DIRS           diy/types.h)
 
+# Include dirs
 set                         (CMAKE_INCLUDE_SYSTEM_FLAG_CXX "-isystem")
 include_directories         (${DIY_INCLUDE_DIRS}
-                             SYSTEM ${MPI_INCLUDE_PATH}
-                            )
+                             ${HDF5_INCLUDE_DIRS}
+                             ${MOAB_INCLUDE_DIRS}
+                             SYSTEM ${MPI_INCLUDE_PATH})
 
-add_executable              (neighbor neighbor.cpp)
-add_executable              (merge    merge.cpp)
-add_executable              (swap     swap.cpp)
-add_executable              (sort     sort.cpp pssort.c pmsort.c util.c)
+# Libraries
+set			    (libraries
+                             ${libraries}
+                             ${HDF5_LIBRARY}
+                             ${MOAB_LIBRARY}
+                             ${CMAKE_THREAD_LIBS_INIT})
 
-if                          (NOT bgq)
-    target_link_libraries   (neighbor                   ${mpi_libraries})
-    target_link_libraries   (merge                      ${mpi_libraries})
-    target_link_libraries   (swap                       ${mpi_libraries})
-    target_link_libraries   (sort                       ${mpi_libraries})
-endif                       (NOT bgq)
-
-if                          (threads)
-    target_link_libraries   (neighbor                   ${CMAKE_THREAD_LIBS_INIT})
-    target_link_libraries   (merge                      ${CMAKE_THREAD_LIBS_INIT})
-    target_link_libraries   (swap                       ${CMAKE_THREAD_LIBS_INIT})
-    target_link_libraries   (sort                       ${CMAKE_THREAD_LIBS_INIT})
-endif                       (threads)
+# Subdirectories
+add_subdirectory            (coupling)
+add_subdirectory            (communication)
