added install command to cmake files and readme

--- a/communication/neighbor/CMakeLists.txt
+++ b/communication/neighbor/CMakeLists.txt
@@ -1,1 +1,9 @@
 add_executable              (neighbor neighbor.cpp)
+
+install(TARGETS neighbor
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/communication/neighbor/
+        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
+
+install(FILES NEIGHBOR_TEST
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/communication/neighbor/
+        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
