--- a/communication/merge/CMakeLists.txt
+++ b/communication/merge/CMakeLists.txt
@@ -1,1 +1,9 @@
 add_executable              (merge merge.cpp)
+
+install(TARGETS merge
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/communication/merge/
+        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
+
+install(FILES MERGE_TEST
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/communication/merge/
+        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
