--- a/communication/sort/CMakeLists.txt
+++ b/communication/sort/CMakeLists.txt
@@ -1,1 +1,9 @@
 add_executable              (sort sort.cpp)
+
+install(TARGETS sort
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/communication/sort/
+        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
+
+install(FILES SORT_TEST
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/communication/sort/
+        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
