--- a/communication/CMakeLists.txt
+++ b/communication/CMakeLists.txt
@@ -1,5 +1,5 @@
-# add_subdirectory            (alltoall)
 add_subdirectory            (merge)
 add_subdirectory            (neighbor)
 add_subdirectory            (sort)
 add_subdirectory            (swap)
+add_subdirectory            (alltoall)
