--- a/communication/alltoall/CMakeLists.txt
+++ b/communication/alltoall/CMakeLists.txt
@@ -1,2 +1,9 @@
 add_executable              (alltoall alltoall.cpp)
 
+install(TARGETS alltoall
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/communication/alltoall/
+        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
+
+install(FILES ALLTOALL_TEST
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/communication/alltoall/
+        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_WRITE GROUP_EXECUTE WORLD_READ WORLD_WRITE WORLD_EXECUTE)
