--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,3 +89,9 @@ if                          (DIY_INCLUDE_DIRS)
 else                        ()
     message                 (ERROR "Need diy2 in order to build any proxy apps")
 endif                       ()
+if                          (DIY_INCLUDE_DIRS)
+    message                 (STATUS "Building I/O proxy app")
+    add_subdirectory        (io)
+else                        ()
+    message                 (ERROR "Need diy2 in order to build any proxy apps")
+endif                       ()
