updated to latest version of DIY

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,26 +10,30 @@ if                          (bgq)
     add_definitions         (-DBGQ)
 endif                       (bgq)
 
-# Debugging
-if                          (debug)
-    if                      (optimize)
-            set             (cxx_flags      ${CMAKE_CXX_FLAGS_RELWITHDEBINFO})
-    else                    (optimize)
-            set             (cxx_flags      ${CMAKE_CXX_FLAGS_DEBUG})
-    endif                   (optimize)
-    add_definitions         (-DDEBUG)
-else                        (debug)
-    if                      (optimize)
-            set             (cxx_flags      ${CMAKE_CXX_FLAGS_RELEASE})
-    else                    (optimize)
-            set             (cxx_flags      ${CMAKE_CXX_FLAGS})
-    endif                   (optimize)
-endif                       (debug)
-add_definitions             (${cxx_flags})
+# C++11
+set                         (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 # OSX flags
 if                          (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-    add_definitions	    (-DMAC_OSX)
+    add_definitions         (-DMAC_OSX)
+    # --- following RPATH settings are for Sierra w/ Clang, hopefully they don't hurt other versions
+    # ref: https://cmake.org/Wiki/CMake_RPATH_handling
+    # use, i.e. don't skip, the full RPATH for the build tree
+    set                     (CMAKE_SKIP_BUILD_RPATH            false)
+    # when building, don't use the install RPATH already (but later on when installing)
+    set                     (CMAKE_BUILD_WITH_INSTALL_RPATH    false)
+    # set RPATH to install path
+    set                     (CMAKE_INSTALL_RPATH               "${CMAKE_INSTALL_PREFIX}/lib")
+    # add the automatically determined parts of the RPATH
+    # which point to directories outside the build tree to the install RPATH
+    set                     (CMAKE_INSTALL_RPATH_USE_LINK_PATH true)
+    # the RPATH to be used when installing, but only if it's not a system directory
+    list                    (FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES
+                                                               "${CMAKE_INSTALL_PREFIX}/lib"
+                                                               isSystemDir)
+    if                      ("${isSystemDir}" STREQUAL         "-1")
+        set                 (CMAKE_INSTALL_RPATH               "${CMAKE_INSTALL_PREFIX}/lib")
+    endif()
 endif                       (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
  # MPI
@@ -39,14 +43,14 @@ if                          (NOT bgq)
 endif                       (NOT bgq)
 
 # Threads
-find_package		    (Threads)
-find_package		    (OpenMP)
-if 			    (OPENMP_FOUND)
-  set                       (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-  set                       (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-else			    ()
-  message		    ("OpenMP not found")
-  add_definitions	    (-DTESS_NO_OPENMP)
+find_package                (Threads)
+find_package                (OpenMP)
+if                          (OPENMP_FOUND)
+    set                     (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set                     (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+else                        ()
+    message                 ("OpenMP not found")
+    add_definitions         (-DTESS_NO_OPENMP)
 endif                       ()
 if                          (NOT diy_thread)
     message                 ("Diy threading is disabled; setting diy threads will have no effect")
@@ -68,14 +72,14 @@ include_directories         (${DIY_INCLUDE_DIRS}
                              SYSTEM ${MPI_INCLUDE_PATH})
 
 # Libraries
-set			    (libraries
+set                         (libraries
                              ${libraries}
                              ${HDF5_LIBRARY}
                              ${MOAB_LIBRARY}
                              ${MB_COUPLER_LIBRARY}
                              ${CMAKE_THREAD_LIBS_INIT})
 if                          (HDF5_LIBRARY AND MOAB_LIBRARY AND MB_COUPLER_LIBRARY)
-set			    (libraries
+set                         (libraries
                              ${libraries}
                              ${ZLIB_LIBRARIES})
 endif                       ()
