--- a/communication/CMakeLists.txt
+++ b/communication/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory            (neighbor)
 add_subdirectory            (sort)
 add_subdirectory            (swap)
 add_subdirectory            (alltoall)
+add_subdirectory            (swap_vs_alltoallv)
